recipe index layout issue fixed by moving div

--- a/app/assets/stylesheets/components/_card-recipe-index.scss
+++ b/app/assets/stylesheets/components/_card-recipe-index.scss
@@ -15,8 +15,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  border: 1px solid rgba(0, 0, 0, 0.125);
   border-radius: 24px;
+  background-color: $mint;
   font-family: $headers-font;
   margin-bottom: 16px;
 }
@@ -43,7 +43,7 @@
 
   }
   a {
-    color: $bright-mint;
+    color: $white;
     text-decoration: none;
     background-color: transparent;
   }
